-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2013 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

6/9/14
    - Fixed memory issue resulting from nested om fields when
      repeatedly running an OPF using the results of a previous
      OPF as input. Thanks to Carlos Murillo-Sanchez.

5/23/14
    - Added case5.m, a 5-bus, 5-generator example case from Rui Bo.
    - Removed extras/psse2matpower.
    - Fixes to printpf() to suppress printing of dispatchable load
      constraint section when there are no dispatchable loads and
      to never print line constraints for unconstrained lines.
    - Fixed crash when using Knitro to solve cases with all
      lines unconstrained.
    - Switched to [L,U,p,q] = lu(B,'vector') form for factorization
      in fast-decoupled power flow in fdpf(), resulting in ~5x
      speedup on some large systems. Thanks to Carlos Murillo-Sanchez.

5/6/14
    - Modified savecase() to automatically add a comment line
      with the function name, and make sure the name is converted
      to a legal function name before saving.
    - Further additions to PSS/E import code to handle repeated
      delimiters, accumulation of warnings to save in comments
      of converted file, improved consistency of verbose option,
      and some automated tests.

4/28/14
    - Major revision of PSS/E import code to further improve
      robustness and include Octave support. Updated psse2mpc() to
      include direct saving of result to MATPOWER case file.
      Added functions:
            psse_parse()
            psse_parse_line()
            psse_parse_section()
      Removed functions:
            psse_count_lines()
            psse_extract_data()
            psse_read_section()

4/11/14