@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+6/13/13
+    - Added ability for loadcase() to load MATPOWER case M-files
+      that are not in the Matlab path by specifying an explicit
+      path in the input filename.
+
 6/9/14
     - Fixed memory issue resulting from nested om fields when
       repeatedly running an OPF using the results of a previous
